src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

.card {
  background-color: gray !important;
  -webkit-border-radius: 14px;
  -moz-border-radius: 14px;
  width: 275px;
  margin: 5px 5px 5px 5px;
  border-radius: 14px;
}

.card img {
  width: 260px;
  height: 260px;
  border: 3px solid black;
}

